Implementação migração do Axis2 para Httpclient5 - Todos modulos documentos fiscais (#1184)
* Javadoc Warnings invalid input: '<' e '&' literais

* Javadoc Warnings invalid input: '<' e '&' literais

* Refatoração de chaves para suportar CNPJ alfanumérico (NT 2026.004)

* Normaliza char para maiusculo na chave

O cálculo do DV usa valores[i - 1] - '0'. Se a chave vier com letras minúsculas (o que é aceito por alguns validadores de CNPJ na base), o DV calculado muda (ex.: 'a' - '0' != 'A' - '0'), gerando falsos negativos/positivos. Normalize o caractere para maiúsculo antes de converter para o valor numérico.

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Remove unused Javadoc references from stub classes
[Javadoc Warnings Tag @see: reference not found

* Implementa DFHttpClient e DFSoapEnvelope para migração do Axis2 para
httpclient5

* Add extra hardening against XXE in DFSoapEnvelope

* Clarify timeout mapping in DFHttpClient to maintain compatibility with
Axis2

* Add unit tests for DFHttpClient to validate SOAP request handling

* Add author annotations

* Alinhar o mapeamento de timeout no DFHttpClient

* Implementação migração do Axis2 para Httpclient5 - Envio Lote

* Migrate web services from Axis2 to HttpClient5 to nfe

* Add exception handling for HTTP client initialization in
WSDistribuicaoNFe

* Refactor web service methods to include specific exception handling for
IOException and DFSoapFaultException

* Add specific exception handling for IOException and DFSoapFaultException
in web service methods

* Implement Closeable interface for web service classes and add close
method to manage HTTP client connections

* Add unit tests for WSFacade to verify construction and closure behavior
after migration to HttpClient5

* Add connection management settings to DFHttpClient to mitigate
keep-alive issues

* Handle null HttpEntity in DFHttpClient response processing to prevent
NullPointerException

* Enable secure pro